lib/askar/askar_native_functions.dart


typedef AskarScanFreeNative = Int32 Function(
  NativeScanHandle scanHandle,
);

final int Function(
  ScanHandle handle,
) nativeAskarScanFree =
    nativeLib.lookup<NativeFunction<AskarScanFreeNative>>('askar_scan_free').asFunction();

typedef AskarScanNextCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  NativeEntryListHandle results,
);

typedef AskarScanNextNative = Int32 Function(
  NativeScanHandle handle,
  Pointer<NativeFunction<AskarScanNextCallback>> cb,
  Int64 cb_id,
);

final int Function(
  ScanHandle handle,
  Pointer<NativeFunction<AskarScanNextCallback>> cb,
  int cb_id,
) nativeAskarScanNext =
    nativeLib.lookup<NativeFunction<AskarScanNextNative>>('askar_scan_next').asFunction();

typedef AskarScanStartCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  NativeScanHandle handle,
);

typedef AskarScanStartNative = Int32 Function(
  NativeStoreHandle handle,
  Pointer<Utf8> profile,
  Pointer<Utf8> category,
  Pointer<Utf8> tag_filter,
  Int64 offset,
  Int64 limit,
  Pointer<NativeFunction<AskarScanStartCallback>> cb,
  Int64 cb_id,
);

final int Function(
  ScanHandle handle,
  Pointer<Utf8> profile,
  Pointer<Utf8> category,
  Pointer<Utf8> tag_filter,
  int offset,
  int limit,
  Pointer<NativeFunction<AskarScanStartCallback>> cb,
  int cb_id,
) nativeAskarScanStart = nativeLib
    .lookup<NativeFunction<AskarScanStartNative>>('askar_scan_start')
    .asFunction();

typedef AskarSessionCloseCallback = Void Function(
  Int64 cb_id,
  Int32 err,
);

typedef AskarSessionCloseNative = Int32 Function(
  NativeSessionHandle handle,
  Int8 commit,
  Pointer<NativeFunction<AskarSessionCloseCallback>> cb,
  Int64 cb_id,
);

final int Function(
  SessionHandle handle,
  int commit,
  Pointer<NativeFunction<AskarSessionCloseCallback>> cb,
  int cb_id,
) nativeAskarSessionClose = nativeLib
    .lookup<NativeFunction<AskarSessionCloseNative>>('askar_session_close')
    .asFunction();

typedef AskarSessionCountCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  Int64 count,
);

typedef AskarSessionCountNative = Int32 Function(
  NativeSessionHandle handle,
  Pointer<Utf8> category,
  Pointer<Utf8> tag_filter,
  Pointer<NativeFunction<AskarSessionCountCallback>> cb,
  Int64 cb_id,
);

final int Function(
  SessionHandle handle,
  Pointer<Utf8> category,
  Pointer<Utf8> tag_filter,
  Pointer<NativeFunction<AskarSessionCountCallback>> cb,
  int cb_id,
) nativeAskarSessionCount = nativeLib
    .lookup<NativeFunction<AskarSessionCountNative>>('askar_session_count')
    .asFunction();

typedef AskarSessionFetchCallback = Void Function(
  NativeCallbackId cb_id,
  Int32 err,
  IntPtr results,
);

typedef AskarSessionFetchNative = Int32 Function(
  NativeSessionHandle handle,
  Pointer<Utf8> category,
  Pointer<Utf8> name,
  Int8 for_update,
  Pointer<NativeFunction<AskarSessionFetchCallback>> cb,
  Int64 cb_id,
);

final int Function(
  SessionHandle handle,
  Pointer<Utf8> category,
  Pointer<Utf8> name,
  int for_update,
  Pointer<NativeFunction<AskarSessionFetchCallback>> cb,
  int cb_id,
) nativeAskarSessionFetch = nativeLib
    .lookup<NativeFunction<AskarSessionFetchNative>>('askar_session_fetch')
    .asFunction();

typedef AskarSessionFetchAllCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  NativeEntryListHandle results,
);

typedef AskarSessionFetchAllNative = Int32 Function(
  NativeSessionHandle handle,
  Pointer<Utf8> category,
  Pointer<Utf8> tag_filter,
  Int64 limit,
  Int8 for_update,
  Pointer<NativeFunction<AskarSessionFetchAllCallback>> cb,
  Int64 cb_id,
);

final int Function(
  SessionHandle handle,
  Pointer<Utf8> category,
  Pointer<Utf8> tag_filter,
  int limit,
  int for_update,
  Pointer<NativeFunction<AskarSessionFetchAllCallback>> cb,
  int cb_id,
) nativeAskarSessionFetchAll = nativeLib
    .lookup<NativeFunction<AskarSessionFetchAllNative>>('askar_session_fetch_all')
    .asFunction();

typedef AskarSessionFetchAllKeysCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  NativeKeyEntryListHandle results,
);

typedef AskarSessionFetchAllKeysNative = Int32 Function(
  NativeSessionHandle handle,
  Pointer<Utf8> alg,
  Pointer<Utf8> thumbprint,
  Pointer<Utf8> tag_filter,
  Int64 limit,
  Int8 for_update,
  Pointer<NativeFunction<AskarSessionFetchAllKeysCallback>> cb,
  Int64 cb_id,
);

final int Function(
  SessionHandle handle,
  Pointer<Utf8> alg,
  Pointer<Utf8> thumbprint,
  Pointer<Utf8> tag_filter,
  int limit,
  int for_update,
  Pointer<NativeFunction<AskarSessionFetchAllKeysCallback>> cb,
  int cb_id,
) nativeAskarSessionFetchAllKeys = nativeLib
    .lookup<NativeFunction<AskarSessionFetchAllKeysNative>>(
        'askar_session_fetch_all_keys')
    .asFunction();

typedef AskarSessionFetchKeyCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  IntPtr results,
);

typedef AskarSessionFetchKeyNative = Int32 Function(
  NativeSessionHandle handle,
  Pointer<Utf8> name,
  Int8 for_update,
  Pointer<NativeFunction<AskarSessionFetchKeyCallback>> cb,
  Int64 cb_id,
);

final int Function(
  SessionHandle handle,
  Pointer<Utf8> name,
  int for_update,
  Pointer<NativeFunction<AskarSessionFetchKeyCallback>> cb,
  int cb_id,
) nativeAskarSessionFetchKey = nativeLib
    .lookup<NativeFunction<AskarSessionFetchKeyNative>>('askar_session_fetch_key')
    .asFunction();

typedef AskarSessionInsertKeyCallback = Void Function(
  Int64 cb_id,
  Int32 err,
);

typedef AskarSessionInsertKeyNative = Int32 Function(
  IntPtr handle,
  IntPtr key_handle,
  Pointer<Utf8> name,
  Pointer<Utf8> metadata,
  Pointer<Utf8> tags,
  Int64 expiry_ms,
  Pointer<NativeFunction<AskarSessionInsertKeyCallback>> cb,
  Int64 cb_id,
);

final int Function(
  int handle,
  int key_handle,
  Pointer<Utf8> name,
  Pointer<Utf8> metadata,
  Pointer<Utf8> tags,
  int expiry_ms,
  Pointer<NativeFunction<AskarSessionInsertKeyCallback>> cb,
  int cb_id,
) nativeAskarSessionInsertKey = nativeLib
    .lookup<NativeFunction<AskarSessionInsertKeyNative>>('askar_session_insert_key')
    .asFunction();

typedef AskarSessionRemoveAllCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  Int64 removed,
);

typedef AskarSessionRemoveAllNative = Int32 Function(
  NativeSessionHandle handle,
  Pointer<Utf8> category,
  Pointer<Utf8> tag_filter,
  Pointer<NativeFunction<AskarSessionRemoveAllCallback>> cb,
  Int64 cb_id,
);

final int Function(
  int handle,
  Pointer<Utf8> category,
  Pointer<Utf8> tag_filter,
  Pointer<NativeFunction<AskarSessionRemoveAllCallback>> cb,
  int cb_id,
) nativeAskarSessionRemoveAll = nativeLib
    .lookup<NativeFunction<AskarSessionRemoveAllNative>>('askar_session_remove_all')
    .asFunction();

typedef AskarSessionRemoveKeyCallback = Void Function(
  Int64 cb_id,
  Int32 err,
);

typedef AskarSessionRemoveKeyNative = Int32 Function(
  NativeSessionHandle handle,
  Pointer<Utf8> name,
  Pointer<NativeFunction<AskarSessionRemoveKeyCallback>> cb,
  Int64 cb_id,
);

final int Function(
  int handle,
  Pointer<Utf8> name,
  Pointer<NativeFunction<AskarSessionRemoveKeyCallback>> cb,
  int cb_id,
) nativeAskarSessionRemoveKey = nativeLib
    .lookup<NativeFunction<AskarSessionRemoveKeyNative>>('askar_session_remove_key')
    .asFunction();

typedef AskarSessionUpdateCallback = Void Function(
  Int64 cb_id,
  Int32 err,
);

typedef AskarSessionStartNative = Int32 Function(
  NativeStoreHandle handle,
  Pointer<Utf8> profile,
  Int8 as_transaction,
  Pointer<NativeFunction<Void Function(NativeCallbackId, Int32, NativeSessionHandle)>> cb,
  NativeCallbackId cb_id,
);

final int Function(
  StoreHandle handle,
  Pointer<Utf8> profile,
  int as_transaction,
  Pointer<NativeFunction<Void Function(NativeCallbackId, Int32, NativeSessionHandle)>> cb,
  int cb_id,
) nativeAskarSessionStart = nativeLib
    .lookup<NativeFunction<AskarSessionStartNative>>('askar_session_start')
    .asFunction();

typedef AskarSessionUpdateNative = Int32 Function(
  NativeSessionHandle handle,
  Int8 operation,
  Pointer<Utf8> category,
  Pointer<Utf8> name,
  NativeByteBuffer value,
  Pointer<Utf8> tags,
  Int64 expiry_ms,
  Pointer<NativeFunction<AskarSessionUpdateCallback>> cb,
  Int64 cb_id,
);

final int Function(
  SessionHandle handle,
  int operation,
  Pointer<Utf8> category,
  Pointer<Utf8> name,
  NativeByteBuffer value,
  Pointer<Utf8> tags,
  int expiry_ms,
  Pointer<NativeFunction<AskarSessionUpdateCallback>> cb,
  int cb_id,
) nativeAskarSessionUpdate = nativeLib
    .lookup<NativeFunction<AskarSessionUpdateNative>>('askar_session_update')
    .asFunction();

typedef AskarSessionUpdateKeyCallback = Void Function(
  Int64 cb_id,
  Int32 err,
);

typedef AskarSessionUpdateKeyNative = Int32 Function(
  NativeSessionHandle handle,
  Pointer<Utf8> name,
  Pointer<Utf8> metadata,
  Pointer<Utf8> tags,
  Int64 expiry_ms,
  Pointer<NativeFunction<AskarSessionUpdateKeyCallback>> cb,
  Int64 cb_id,
);

final int Function(
  SessionHandle handle,
  Pointer<Utf8> name,
  Pointer<Utf8> metadata,
  Pointer<Utf8> tags,
  int expiry_ms,
  Pointer<NativeFunction<AskarSessionUpdateKeyCallback>> cb,
  int cb_id,
) nativeAskarSessionUpdateKey = nativeLib
    .lookup<NativeFunction<AskarSessionUpdateKeyNative>>('askar_session_update_key')
    .asFunction();

typedef AskarStoreCloseCallback = Void Function(
  Int64 cb_id,
  Int32 err,
);

typedef AskarStoreCloseNative = Int32 Function(
  NativeStoreHandle handle,
  Pointer<NativeFunction<AskarStoreCloseCallback>> cb,
  Int64 cb_id,
);

final int Function(
  StoreHandle handle,
  Pointer<NativeFunction<AskarStoreCloseCallback>> cb,
  int cb_id,
) nativeAskarStoreClose = nativeLib
    .lookup<NativeFunction<AskarStoreCloseNative>>('askar_store_close')
    .asFunction();

typedef AskarStoreCopyCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  NativeStoreHandle handle,
);

typedef AskarStoreCopyNative = Int32 Function(
  NativeStoreHandle handle,
  Pointer<Utf8> target_uri,
  Pointer<Utf8> key_method,
  Pointer<Utf8> pass_key,
  Int8 recreate,
  Pointer<NativeFunction<AskarStoreCopyCallback>> cb,
  Int64 cb_id,
);

final int Function(
  StoreHandle handle,
  Pointer<Utf8> target_uri,
  Pointer<Utf8> key_method,
  Pointer<Utf8> pass_key,
  int recreate,
  Pointer<NativeFunction<AskarStoreCopyCallback>> cb,
  int cb_id,
) nativeAskarStoreCopy = nativeLib
    .lookup<NativeFunction<AskarStoreCopyNative>>('askar_store_copy')
    .asFunction();

typedef AskarStoreCreateProfileCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  Pointer<Utf8> result_p,
);

typedef AskarStoreCreateProfileNative = Int32 Function(
  NativeStoreHandle handle,
  Pointer<Utf8> profile,
  Pointer<NativeFunction<AskarStoreCreateProfileCallback>> cb,
  Int64 cb_id,
);

final int Function(
  StoreHandle handle,
  Pointer<Utf8> profile,
  Pointer<NativeFunction<AskarStoreCreateProfileCallback>> cb,
  int cb_id,
) nativeAskarStoreCreateProfile = nativeLib
    .lookup<NativeFunction<AskarStoreCreateProfileNative>>('askar_store_create_profile')
    .asFunction();

typedef AskarStoreGenerateRawKeyNative = Int32 Function(
  NativeByteBuffer seed,
  Pointer<Pointer<Utf8>> out,
);

final int Function(
  NativeByteBuffer seed,
  Pointer<Pointer<Utf8>> out,
) nativeAskarStoreGenerateRawKey = nativeLib
    .lookup<NativeFunction<AskarStoreGenerateRawKeyNative>>(
        'askar_store_generate_raw_key')
    .asFunction();

typedef AskarStoreGetProfileNameCallback = Void Function(
  Int64 cb_id,
  Int32 err,
  Pointer<Utf8> name,
);
